Update to Wildfly 34.0.1.Final